cluster/gitops/monitoring/victoria-metrics/anomaly/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoria-metrics-anomaly
specs:
  - description: victoria-metrics-anomaly
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: victoria-metrics-anomaly
        app.kubernetes.io/instance: victoria-metrics-anomaly
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      # License service
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: victoria-metrics-license-service
              app.kubernetes.io/instance: victoria-metrics-license-service
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
      # Access to query metrics
      - toEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/time-series-supplier: "true"
        toPorts:
          - ports:
              - port: "8427"
                protocol: TCP
    ingress:
      # Metrics
      - fromEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
